# gosdclock

./: CMakeLists.txt  README.md
include/gosdclock/: config.hpp  osd_window.hpp  settings_window.hpp
src/: config.cpp  gosd_clock.cpp  gosd_settings.cpp  osd_window.cpp  settings_window.cpp
